--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-seat-picker": "1.5.1",
+    "react-tooltip": "3.11.1",
     "typescript": "^5.4.5",
     "web-vitals": "^2.1.0"
   },
